Toggle through alignment options (Fix #56)

--- a/dev/scss/main/resultinfo.scss
+++ b/dev/scss/main/resultinfo.scss
@@ -48,6 +48,9 @@ div.result.panel .view {
     &.align.right::after {
       content: $fa-right-align;
     }
+    &.align.center::after {
+      content: $fa-center-align;
+    }
     &.show-kq::after {
       content: $fa-code;
     }
